--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -2,4 +2,22 @@
 
 <p><%= @tweet.content %></p>
 
-<%= link_to "Back to tweets", tweets_path %>
+<h2>New comment</h2>
+
+<%= form_for :comment, url: tweet_comments_path(@tweet) do |form| %>
+    <%= form.text_area :content %>
+    <%= form.submit %>
+<% end %>    
+
+<h2>Comments</h2>
+
+<ol>
+    <% @tweet.comments.each do |comment| %>
+    
+    <li><%= comment.content %></li>
+    
+    <% end %>
+</ol>
+
+<%= link_to "Back to tweets", tweet_path %>
+
